--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -5,3 +5,19 @@ body,
   padding: 0;
   margin: 0;
 }
+
+.el-breadcrumb {
+  margin-bottom: 15px;
+}
+
+.el-card {
+  box-shadow: 1px 1px rgba(0, 0, 0, .15)!important;
+}
+
+.el-table {
+  margin-top: 15px;
+}
+
+.el-pagination {
+  margin-top: 15px;
+}
